# boostserver

./: .gitattributes  .gitignore  README.md  ServerBoost.sln
BoostServer/: BoostServer.filters  BoostServer.vcxproj  BoostServer.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  server
BoostServer/Data/: config.ini
BoostServer/Debug/: BoostServer.lastbuildstate
BoostServer/Logic/: HeartBeat.h  LogicSystem.cpp  LogicSystem.h  Makefile  MsgDefine.h  Player.cpp  Player.h  cmake_install.cmake
BoostServer/NetModel/: .Server.cpp.swp  Base64.cpp  Base64.h  Base64Handler.h  Makefile  MsgHandler.h  Server.cpp  Server.h  Session.cpp  Session.h  Singleton.h  StreamNode.cpp  StreamNode.h  cmake_install.cmake
ConsoleApplication1/: CMakeCache.txt  CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Makefile  MsgHandler.h  Server.cpp  Server.h  Session.cpp  Session.h  Singleton.h  StreamNode.cpp  StreamNode.h  cmake_install.cmake  main.cpp  server
ConsoleApplication1/Debug/: CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  ConsoleApplication1.pch  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ConsoleApplication1/Logic/: CMakeLists.txt  HeartBeat.cpp  HeartBeat.h  MsgDefine.h  Singleton.h  cmake_install.cmake
ConsoleApplication1/NetModel/: CMakeLists.txt  Makefile  Server.h  Session.cpp  Session.h  StreamNode.cpp
Debug/: ConsoleApplication1.ilk  server.ilk
data/: config.ini
(+1 files in other folders)
